test/files/pos/java-import-static-from-subclass/Client.java
package p1;

import static p1.Test.I;

class Client {
  void foo(I i) {}
}
