test/files/neg/t9617/DeprecatedMethod.java
package p1;

public class DeprecatedMethod {
  @Deprecated
  public static void foo() {}
}
